<resources>
    <string name="app_name">IELTS for All</string>
    <string name="app_policy">By tapping Continue, Create account, I agree to Company\'s Terms of Service, Payments Terms of Service, Privacy Policy, and Non-discrimination Policy.</string>
    <string name="welcome_text">Welcome to IELTS for All.</string>
    <string name="login_pretext">Already a member?</string>
    <string name="login_signin_btn_text">Sign In</string>
    <string name="signup_password_rule_text">Your password must include at least one symbol and be 8 or more characters long.</string>
    <string name="signin_header_text">Sign In</string>
    <string name="signin_hint_username">username</string>
    <string name="signin_hint_pass">password</string>
    <string name="signin_btn_signin">Sign In</string>
    <string name="signin_forget_pass">Forgot password?</string>
    <string name="signin_no_account_text">Don\'t have an account?</string>
    <string name="signin_signup">Sign Up</string>
    <string name="signup_hint_fullname">Full Name</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_phone_no">Phone Number</string>
    <string name="signup_hint_pass">Password</string>
    <string name="signup_hint_confirm_pass">Confirm Password</string>
    <string name="signup_create_account">CREATE ACCOUNT</string>

    //facebook
    <string name="facebook_app_id">2331202717153013</string>
    <string name="fb_login_protocol_scheme">fb2331202717153013</string>

    //reading


    <string name="reading_task1_passage">A. Harsh and inconsistent marking is putting pupils in England off studying languages beyond age 14, a report says. The dawn of more rigorous GCSEs will further reduce interest in languages, research by the British Council and Education Development Trust suggests. It says a focus on math and sciences, as well as a perception language are a hard option, is also de-motivating pupils and teachers.\n
B. Exams watchdog Ofqual said last year\'s languages results were "very stable". From September 2016, new GCSE and A level modern language syllabuses will be taught in England, and new exams will be taken in the summer of 2018. The Language Trends Survey, in its 14th year of charting the state f language learning in England\'s schools, suggests these will deter pupils from studying languages. It says: "The exam system is seen as one of the principal barriers to the successful development of language teaching. "The comparative difficulty of exams in languages in relation to other subjects, and widely reported harsh and inconsistent marking, are deeply de-motivating for both pupils and teachers."
C. The report says the EBacc, where pupils have to study English, a language, math, science and history or geography to GCSE, "appears to be having very little impact on the numbers of pupils taking languages post-16". Uptake after GCSE is found to be a particular concern, with some state schools suggesting the small numbers of students opting to take languages at A-level means the subject is becoming "financially unviable".
D. The proportion of the total cohort sitting a GCSE in a language dropped by one percentage point (to 48%) between 2014 and 2015, ending the rise in entries seen from 2012 onward, when the EBacc was brought in. Entries for each of the three main languages fell this year compared with 2014, French is down 6%, German is down 10% and Spanish is down 3%. Overall entries for languages at A-level are at 94% of their 2002 level, and they declined by 3% between 2014 and 2015 - French uptake declined by 1% and German by 2.5% while Spanish uptake rose by almost 15%.
E. The report does note some positive developments, particularly at primary level, saying just over half of England\'s primary schools now have access to specialist expertise in the teaching of languages. But primary schools report finding it hard to fit languages into the curriculum time available and to recruit suitably qualified teaching staff. Teresa Tinsley, coauthor of the report, said: "Languages are already one of the harder GCSEs, and teachers fear that with the new exams it will be even tougher for pupils to get a good grade. "Combine this with the expectation that a wider range of pupils will be sitting the exam and it is not surprising that teachers feel embattled. "Improving their morale and confidence in the exam system is crucial if languages are to thrive in our schools."
F. A spokesman for the exam regulator, Ofqual, said: "We are committed to ensuring that all GCSEs, AS- and A-levels, including those in modern foreign languages, are sufficiently valid, produce fair and reliable results and have a positive impact on teaching and learning. "Last year's results in modern foreign languages were very stable, with only small changes in the proportions achieving each grade compared to the previous year. "We have looked into concerns that it is harder for students to achieve the highest grades in A level language. "We found this is because of the way the exams are designed, rather than the nature of the subject content. "We are keeping this under review and will be further publishing information shortly."
G. Referring to the new modern foreign language A-levels and GCSEs being taught from this September, the spokesman added: "Before we accredit a qualification, we check the exams will be designed to allow good differentiation – including that the best students will be able to achieve the highest grades - and whether they are properly based on the new subject content."
H. Mark Herbert, head of schools programmes at the British Council, said: "The country\'s current shortage of language skills is estimated to be costing the economy tens of billions in missed trade and business opportunities every year. "Parents, schools and businesses can all play their part in encouraging our young people to study languages at school and to ensure that language learning is given back the respect and prominence that it deserves." Tony McAleavy, director of research and development at the Education Development Trust, said: "The reduction in pupils opting for GCSE and A level languages is concerning, particularly coupled with teachers\' lack of faith in the exam system. "Solutions are required to give languages a firmer place in the curriculum, to make languages more compelling for pupils who find the examination process a barrier and to boost teacher morale."</string>
    <string name="reading_task1_pretitle">You should spend about 20 minutes on Questions 1–12, which are based on Reading Passage 1 below.</string>
    <string name="reading_task1_title">Harsh marks \'put pupils off languages\'</string>
    <string name="reading_task1_header">Reading IELTS</string>


</resources>
