<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SigninActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin_username_et"
        android:layout_marginBottom="36dp"
        android:text="@string/signin_header_text"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signin_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_hollow_stroke_dark"
        android:hint="@string/signin_hint_username"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="@color/colorSecondary" />

    <EditText
        android:id="@+id/signin_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_username_et"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_hollow_stroke_dark"
        android:hint="@string/signin_hint_pass"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/colorSecondary" />

    <Button
        android:id="@+id/signin_signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_password_et"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/signin_btn_signin"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/signin_forget_pass_tv"
        android:layout_below="@+id/signin_signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/signin_forget_pass"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_below="@+id/signin_forget_pass_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/signin_no_account_text"
            android:textColor="@color/colorAccent" />
        <TextView
            android:id="@+id/signin_signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_signup"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>



</RelativeLayout>